--- a/resources/assets/sass/coreui/_bootstrap-variables.scss
+++ b/resources/assets/sass/coreui/_bootstrap-variables.scss
@@ -28,6 +28,8 @@ $green:                           #4dbd74;
 $teal:                            #20c997 !default;
 $cyan:                            #63c2de;
 
+$primary:                         #D44816 !default;
+
 $colors: (
   blue:                           $blue,
   indigo:                         $indigo,
@@ -45,7 +47,8 @@ $colors: (
 );
 
 $theme-colors: (
-  primary:                        $blue,
+ // primary:                        $blue,
+  primary:                        $primary,
   secondary:                      $gray-300,
   success:                        $green,
   info:                           $cyan,
