--- a/resources/assets/sass/custom/variables.scss
+++ b/resources/assets/sass/custom/variables.scss
@@ -17,5 +17,7 @@ $bg-color: #fff !default;
 $main-color-custom: #D44816 !default;
 $main-color-custom-transparent: #d4481678 !default;
 
+$label-color: #23282C !default;
+
 
 $brighten-grey: #ebe4e1 !default;
