--- a/resources/assets/sass/custom/components/components.scss
+++ b/resources/assets/sass/custom/components/components.scss
@@ -1,7 +1,7 @@
 
 // btns
 .btn-primary {
-  padding: 10px 35px;
+  padding: 6px 35px;
   border-radius: 4px;
   text-transform: uppercase;
   font-size: 12px;
@@ -51,7 +51,8 @@
   left: 40px;
 
   .text-footer-custom {
-    color: $gray-600
+    color: rgba(0, 0, 0, 0.53);
+    font-size: 12px;
   }
 }
 
