--- a/public/custom/css/app.css
+++ b/public/custom/css/app.css
@@ -40,7 +40,7 @@ html body {
   border-radius: 4px;
   text-transform: uppercase;
   font-size: 12px;
-  margin: auto 0 auto auto;
+  margin: 10px 0 10px auto;
   display: block;
 }
 
@@ -85,11 +85,15 @@ html body {
 .footer-custom .text-footer-custom {
   color: rgba(0, 0, 0, 0.53);
   font-size: 12px;
+  margin-left: 8px;
 }
 
-.form-group,
-.mb-3 {
+.form-group {
   margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.5rem !important;
 }
 
 #app,
