--- a/resources/assets/sass/custom/components/components.scss
+++ b/resources/assets/sass/custom/components/components.scss
@@ -5,7 +5,7 @@
   border-radius: 4px;
   text-transform: uppercase;
   font-size: 12px;
-  margin: auto 0 auto auto;
+  margin: 10px 0 10px auto;
   display: block;
 }
 
@@ -53,11 +53,16 @@
   .text-footer-custom {
     color: rgba(0, 0, 0, 0.53);
     font-size: 12px;
+    margin-left: 8px;
   }
 }
 
 
 // form
-.form-group, .mb-3 {
+.form-group {
   margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.5rem !important;
 }
