--- a/public/custom/css/app.css
+++ b/public/custom/css/app.css
@@ -40,7 +40,7 @@ html body {
   border-radius: 4px;
   text-transform: uppercase;
   font-size: 12px;
-  margin: 10px 0 10px auto;
+  margin: 10px 0 0 auto;
   display: block;
 }
 
@@ -78,14 +78,18 @@ html body {
 
 .footer-custom {
   position: absolute;
-  bottom: 20px;
-  left: 40px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
 }
 
 .footer-custom .text-footer-custom {
   color: rgba(0, 0, 0, 0.53);
   font-size: 12px;
-  margin-left: 8px;
+  position: absolute;
+  top: 0;
+  left: 45px;
 }
 
 .form-group {
@@ -93,12 +97,13 @@ html body {
 }
 
 .mb-3 {
-  margin-bottom: 0.5rem !important;
+  margin-bottom: 0 !important;
 }
 
 #app,
 #bg_app {
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   margin-bottom: -10px;
 }
 
@@ -106,6 +111,7 @@ html body {
   background: #fff;
   position: relative;
   float: right;
+  padding-bottom: 55px;
 }
 
 #app.open {
@@ -179,6 +185,7 @@ html body {
 @media screen and (min-width: 969px) {
   #app {
     padding: 20px 30px;
+    padding-bottom: 55px;
   }
 }
 
@@ -213,6 +220,14 @@ html body {
   #login,
   #register {
     padding-top: 25px;
+  }
+
+  .footer-custom {
+    width: 100%;
+  }
+
+  .footer-custom .text-footer-custom {
+    left: 35px;
   }
 }
 
