--- a/resources/assets/sass/custom/components/components.scss
+++ b/resources/assets/sass/custom/components/components.scss
@@ -5,7 +5,7 @@
   border-radius: 4px;
   text-transform: uppercase;
   font-size: 12px;
-  margin: 10px 0 10px auto;
+  margin: 10px 0 0 auto;
   display: block;
 }
 
@@ -47,13 +47,17 @@
 // footer
 .footer-custom {
   position: absolute;
-  bottom: 20px;
-  left: 40px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
 
   .text-footer-custom {
     color: rgba(0, 0, 0, 0.53);
     font-size: 12px;
-    margin-left: 8px;
+    position: absolute;
+    top: 0;
+    left: 45px;
   }
 }
 
@@ -64,5 +68,5 @@
 }
 
 .mb-3 {
-  margin-bottom: 0.5rem !important;
+  margin-bottom: 0 !important;
 }
