--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -2,6 +2,7 @@
 @import "core-variables";
 @import "custom-typography";
 @import "custom-table";
+@import "custom-sidebar";
 
 
 a, h6, h5, h4, h3, h2, h1, span, p, pre, li {
