--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -4,6 +4,10 @@
 @import "custom-table";
 @import "custom-sidebar";
 
+body {
+  background: $color-bg-body;
+}
+
 
 a, h6, h5, h4, h3, h2, h1, span, p, pre, li {
   font-family: 'Rubik', sans-serif !important;
