--- a/resources/assets/sass/coreui/_bootstrap-variables.scss
+++ b/resources/assets/sass/coreui/_bootstrap-variables.scss
@@ -49,7 +49,7 @@ $colors: (
 $theme-colors: (
  // primary:                        $blue,
   primary:                        $primary,
-  secondary:                      $gray-300,
+  secondary:                      #D8D8D8,
   success:                        $green,
   info:                           $cyan,
   warning:                        $yellow,
