--- a/resources/assets/sass/coreui/_core-variables.scss
+++ b/resources/assets/sass/coreui/_core-variables.scss
@@ -38,7 +38,7 @@ $h-2-size:                              32px !default;
 $h-2-margin-bottom:                     30px !default;
 
 
-
+$secondary:                             #D8D8D8 !default;
 
 // table
 $active-field-color:                    rgba(189, 64, 19, 0.65) !default;
