--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -38,3 +38,9 @@ a, h6, h5, h4, h3, h2, h1, span, p, pre, li {
   border-bottom: none;
 }
 
+.btn-secondary {
+  padding: 6px 35px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  font-size: 12px;
+}
