--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21204,6 +21204,12 @@ h2 {
   margin-bottom: 30px !important;
 }
 
+.header_card_simple {
+  text-transform: uppercase;
+  color: #28313B;
+  display: block;
+}
+
 table.table td,
 table th,
 table tr {
@@ -21267,6 +21273,32 @@ thead .sorting.sorting_desc {
   color: white;
 }
 
+.card-custom {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.card-custom .card-text {
+  margin-bottom: 2px;
+}
+
+.card-custom .btn-primary,
+.card-custom .btn-secondary {
+  padding: 6px 10px;
+  margin: 4px auto;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+
+.card-custom .statusCard {
+  margin-bottom: 0;
+  margin-top: 20px;
+}
+
+.card label {
+  font-weight: 500;
+}
+
 body {
   background: #f0f0f0;
 }
@@ -21317,9 +21349,30 @@ li {
 
 .btn-secondary {
   padding: 6px 35px;
-  border-radius: 4px;
+}
+
+.btn-secondary {
   text-transform: uppercase;
   font-size: 12px;
+}
+
+.font500 {
+  font-weight: 500 !important;
+}
+
+.uppercase {
+  text-transform: uppercase !important;
+}
+
+.divider_custom {
+  width: 100%;
+  height: 1px;
+  background: #BD4013;
+  margin: 10px auto;
+}
+
+.btn-custom-create-campaign.btn {
+  padding: 8px 35px;
 }
 
 .vue-notification.warning {
