--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -3,6 +3,7 @@
 @import "custom-typography";
 @import "custom-table";
 @import "custom-sidebar";
+@import "custom-card";
 
 body {
   background: $color-bg-body;
@@ -40,7 +41,28 @@ a, h6, h5, h4, h3, h2, h1, span, p, pre, li {
 
 .btn-secondary {
   padding: 6px 35px;
-  border-radius: 4px;
+}
+
+.btn-secondary {
   text-transform: uppercase;
   font-size: 12px;
+}
+
+.font500 {
+  font-weight: 500 !important;
+}
+
+.uppercase {
+  text-transform: uppercase !important;
+}
+
+.divider_custom {
+  width: 100%;
+  height: 1px;
+  background: $main-color;
+  margin: 10px auto;
+}
+
+.btn-custom-create-campaign.btn {
+  padding: 8px 35px;
 }
